# gpx-editor

./: .gitignore  .ruff.toml  README.md  main.py  pyproject.toml
docs/: data_structures.md  file_formats_guide.md  garmin-gpx-tcx-coursepoints.md  plan.md  usage_examples.md
src/gpx_editor/: app.py  main_window.py
src/gpx_editor/io/: _course_point_types.py  _distance.py  fit_reader.py  fit_writer.py  gpx_reader.py  gpx_writer.py  osm_cache.py  osm_reader.py  tcx_reader.py  tcx_writer.py
src/gpx_editor/logic/: merge.py
src/gpx_editor/models/: route.py  route_entry.py
src/gpx_editor/ui/: dataframe_table.py  dedup_dialog.py  elevation_widget.py  map_widget.py  merge_dialog.py  osm_query_dialog.py  poi_icons.py  review_toolbar.py  right_panel.py  route_list_widget.py  row_edit_dialog.py
tests/: conftest.py  test_checkpoint_mapping.py
tests/io/: test_course_point_types.py  test_gpx_reader.py  test_gpx_writer.py  test_tcx_reader.py  test_tcx_writer.py
tests/logic/: test_merge.py
tests/models/: test_route.py
