[project]
name = "gpx-editor"
version = "0.1.0"
description = "GPX editor focused on cues and POIs, mainly to copy them from one track to another. It started to edit routes from RACA 2026."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
